cmake_minimum_required(VERSION 3.15)
project(OranizedDependencies LANGUAGES CXX)

# Require C++17 and disable extensions for all targets
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# All applications will end in .bin
set(CMAKE_EXECUTABLE_SUFFIX .bin)

# All source files are in src/,
#  and header files are in include/
set(SRC src)
set(INC include)
include_directories(${INC})

# Build each app/lib twice
foreach(X deps_full deps_less)
	# Applications
	add_executable(${X}_a1 ${SRC}/a1.cpp)
	add_executable(${X}_a2 ${SRC}/a2.cpp)
	add_executable(${X}_a3 ${SRC}/a3.cpp)

	# Libraries
	add_library(${X}_b1 ${SRC}/b1.cpp)
	add_library(${X}_b2 ${SRC}/b2.cpp)
	add_library(${X}_b3 ${SRC}/b3.cpp)
	add_library(${X}_b4 ${SRC}/b4.cpp)
	add_library(${X}_b5 ${SRC}/b5.cpp)
	add_library(${X}_c1 ${SRC}/c1.cpp)
	add_library(${X}_c2 ${SRC}/c2.cpp)
	add_library(${X}_c3 ${SRC}/c3.cpp)
	add_library(${X}_d1 ${SRC}/d1.cpp)
	add_library(${X}_d2 ${SRC}/d2.cpp)
	add_library(${X}_e1 ${SRC}/e1.cpp)
	add_library(${X}_e2 ${SRC}/e2.cpp)
	add_library(${X}_e3 ${SRC}/e3.cpp)
	add_library(${X}_e4 ${SRC}/e4.cpp)
endforeach()

# Fully specified dependencies
set(X deps_full)
# a1
target_link_libraries(${X}_a1 ${X}_b1)
target_link_libraries(${X}_a1 ${X}_b2)
target_link_libraries(${X}_a1 ${X}_b3)
target_link_libraries(${X}_a1 ${X}_b4)
target_link_libraries(${X}_a1 ${X}_b5)
target_link_libraries(${X}_a1 ${X}_c1)
target_link_libraries(${X}_a1 ${X}_c2)
target_link_libraries(${X}_a1 ${X}_c3)
target_link_libraries(${X}_a1 ${X}_d1)
target_link_libraries(${X}_a1 ${X}_d2)
target_link_libraries(${X}_a1 ${X}_e1)
target_link_libraries(${X}_a1 ${X}_e2)
target_link_libraries(${X}_a1 ${X}_e3)
target_link_libraries(${X}_a1 ${X}_e4)
# a2
target_link_libraries(${X}_a2 ${X}_b1)
#target_link_libraries(${X}_a2 ${X}_b2)
target_link_libraries(${X}_a2 ${X}_b3)
#target_link_libraries(${X}_a2 ${X}_b4)
target_link_libraries(${X}_a2 ${X}_b5)
target_link_libraries(${X}_a2 ${X}_c1)
target_link_libraries(${X}_a2 ${X}_c2)
#target_link_libraries(${X}_a2 ${X}_c3)
#target_link_libraries(${X}_a2 ${X}_d1)
#target_link_libraries(${X}_a2 ${X}_d2)
target_link_libraries(${X}_a2 ${X}_e1)
target_link_libraries(${X}_a2 ${X}_e2)
target_link_libraries(${X}_a2 ${X}_e3)
#target_link_libraries(${X}_a2 ${X}_e4)
# a3
#target_link_libraries(${X}_a3 ${X}_b1)
target_link_libraries(${X}_a3 ${X}_b2)
target_link_libraries(${X}_a3 ${X}_b3)
#target_link_libraries(${X}_a3 ${X}_b4)
#target_link_libraries(${X}_a3 ${X}_b5)
target_link_libraries(${X}_a3 ${X}_c1)
#target_link_libraries(${X}_a3 ${X}_c2)
#target_link_libraries(${X}_a3 ${X}_c3)
target_link_libraries(${X}_a3 ${X}_d1)
#target_link_libraries(${X}_a3 ${X}_d2)
target_link_libraries(${X}_a3 ${X}_e1)
#target_link_libraries(${X}_a3 ${X}_e2)
#target_link_libraries(${X}_a3 ${X}_e3)
#target_link_libraries(${X}_a3 ${X}_e4)
# b1
target_link_libraries(${X}_b1 ${X}_c1)
target_link_libraries(${X}_b1 ${X}_c2)
target_link_libraries(${X}_b1 ${X}_c3)
target_link_libraries(${X}_b1 ${X}_d1)
target_link_libraries(${X}_b1 ${X}_d2)
target_link_libraries(${X}_b1 ${X}_e1)
target_link_libraries(${X}_b1 ${X}_e2)
target_link_libraries(${X}_b1 ${X}_e3)
target_link_libraries(${X}_b1 ${X}_e4)
# b2
#target_link_libraries(${X}_b2 ${X}_c1)
target_link_libraries(${X}_b2 ${X}_c2)
target_link_libraries(${X}_b2 ${X}_c3)
#target_link_libraries(${X}_b2 ${X}_d1)
target_link_libraries(${X}_b2 ${X}_d2)
target_link_libraries(${X}_b2 ${X}_e1)
target_link_libraries(${X}_b2 ${X}_e2)
target_link_libraries(${X}_b2 ${X}_e2)
#target_link_libraries(${X}_b2 ${X}_e3)
target_link_libraries(${X}_b2 ${X}_e4)
# b3
#target_link_libraries(${X}_b3 ${X}_c1)
#target_link_libraries(${X}_b3 ${X}_c2)
#target_link_libraries(${X}_b3 ${X}_c3)
#target_link_libraries(${X}_b3 ${X}_d1)
target_link_libraries(${X}_b3 ${X}_d2)
#target_link_libraries(${X}_b3 ${X}_e1)
target_link_libraries(${X}_b3 ${X}_e2)
target_link_libraries(${X}_b3 ${X}_e3)
#target_link_libraries(${X}_b3 ${X}_e4)
# b4
#target_link_libraries(${X}_b4 ${X}_c1)
target_link_libraries(${X}_b4 ${X}_c2)
target_link_libraries(${X}_b4 ${X}_c3)
#target_link_libraries(${X}_b4 ${X}_d1)
target_link_libraries(${X}_b4 ${X}_d2)
target_link_libraries(${X}_b4 ${X}_e1)
#target_link_libraries(${X}_b4 ${X}_e2)
target_link_libraries(${X}_b4 ${X}_e3)
target_link_libraries(${X}_b4 ${X}_e4)
# b5
target_link_libraries(${X}_b5 ${X}_c1)
#target_link_libraries(${X}_b5 ${X}_c2)
target_link_libraries(${X}_b5 ${X}_c3)
#target_link_libraries(${X}_b5 ${X}_d1)
#target_link_libraries(${X}_b5 ${X}_d2)
target_link_libraries(${X}_b5 ${X}_e1)
#target_link_libraries(${X}_b5 ${X}_e2)
target_link_libraries(${X}_b5 ${X}_e3)
target_link_libraries(${X}_b5 ${X}_e4)
# c1
target_link_libraries(${X}_c1 ${X}_d1)
target_link_libraries(${X}_c1 ${X}_d2)
target_link_libraries(${X}_c1 ${X}_e1)
target_link_libraries(${X}_c1 ${X}_e2)
target_link_libraries(${X}_c1 ${X}_e3)
target_link_libraries(${X}_c1 ${X}_e4)
# c2
target_link_libraries(${X}_c2 ${X}_d1)
#target_link_libraries(${X}_c2 ${X}_d2)
target_link_libraries(${X}_c2 ${X}_e1)
target_link_libraries(${X}_c2 ${X}_e2)
#target_link_libraries(${X}_c2 ${X}_e3)
target_link_libraries(${X}_c2 ${X}_e4)
# c3
#target_link_libraries(${X}_c3 ${X}_d1)
#target_link_libraries(${X}_c3 ${X}_d2)
#target_link_libraries(${X}_c3 ${X}_e1)
target_link_libraries(${X}_c3 ${X}_e2)
target_link_libraries(${X}_c3 ${X}_e3)
#target_link_libraries(${X}_c3 ${X}_e4)
# d1
target_link_libraries(${X}_d1 ${X}_e1)
target_link_libraries(${X}_d1 ${X}_e2)
target_link_libraries(${X}_d1 ${X}_e3)
target_link_libraries(${X}_d1 ${X}_e4)
# d2
target_link_libraries(${X}_d2 ${X}_e1)
target_link_libraries(${X}_d2 ${X}_e2)
target_link_libraries(${X}_d2 ${X}_e3)
#target_link_libraries(${X}_d2 ${X}_e4)

# Fewer dependencies
set(X deps_less)
target_link_libraries(${X}_a1 ${X}_b1 ${X}_b2 ${X}_b3 ${X}_b4 ${X}_b5)
target_link_libraries(${X}_a2 ${X}_b1 ${X}_b3 ${X}_b5)
target_link_libraries(${X}_a3 ${X}_b2 ${X}_b3 ${X}_c1)
target_link_libraries(${X}_b1 ${X}_c1 ${X}_c2 ${X}_c3)
target_link_libraries(${X}_b2 ${X}_c2 ${X}_c3 ${X}_d2)
target_link_libraries(${X}_b3 ${X}_d2)
target_link_libraries(${X}_b4 ${X}_c2 ${X}_c3 ${X}_d2)
target_link_libraries(${X}_b5 ${X}_c1 ${X}_c3)
target_link_libraries(${X}_c1 ${X}_d1 ${X}_d2)
target_link_libraries(${X}_c2 ${X}_d1)
target_link_libraries(${X}_c3 ${X}_e2 ${X}_e3)
target_link_libraries(${X}_d1 ${X}_e1 ${X}_e2 ${X}_e3 ${X}_e4)
target_link_libraries(${X}_d2 ${X}_e1 ${X}_e2 ${X}_e3)
